--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -24,3 +24,4 @@ jobs:
           args:
             -Dsonar.projectKey=ilumin_backendNestjs
             -Dsonar.organization=ilumin
+            -Dsonar.scm.disabled=true
