update sonar properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,13 @@
-sonar.exclusions=build/**,public/**,**.json,**/**.css,**/**.test.tsx,src/index.tsx,src/reportWebVitals.ts,src/setupTests.ts
+# Required metadata
 sonar.projectKey=ilumin_backendNestjs
-sonar.organization=ilumin
-sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.projectName=ilumin
+sonar.projectVersion=1.0
+
+# Comma-separated paths to directories with sources (required)
+sonar.sources=src
+
+# Language
+sonar.language=typescript
+
+# Encoding of the source files
+sonar.sourceEncoding=UTF-8
