Update sonar ci by using data from doc

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,13 +1,8 @@
-# Required metadata
 sonar.projectKey=ilumin_backendNestjs
-sonar.projectName=ilumin
-sonar.projectVersion=1.0
+sonar.organization=ilumin
 
-# Comma-separated paths to directories with sources (required)
+# This is the name and version displayed in the SonarCloud UI.
+sonar.projectName=backendNestjs
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=src
-
-# Language
-sonar.language=typescript
-
-# Encoding of the source files
-sonar.sourceEncoding=UTF-8
